--- a/project_1B_data_modeling_with_cassandra.ipynb
+++ b/project_1B_data_modeling_with_cassandra.ipynb
@@ -356,13 +356,32 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primary Key definition\n",
+    "Here is the rationale for specifying the primary keys.\n",
+    "- What columns will be used for *filtering*? This will indicate primary key.\n",
+    "- What columns will be used for *ordering*? This will indicate clustering key.\n",
+    "- Template: PRIMARY KEY ((filtering_columns), ordering_columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "editable": true
    },
    "source": [
     "**Query 1** - Create table, insert into it, and check query\n",
+    "\n",
+    "\n",
     "*Give me the artist, song title and song's length in the music app history\n",
-    "that was heard during sessionId = 338, and itemInSession = 4*"
+    "that was heard during sessionId = 338, and itemInSession = 4*\n",
+    "\n",
+    "\n",
+    "Primary key rationale:\n",
+    "- The filtering columns (primary keys) will be: `session_id` and `item_in_session`.\n",
+    "- There's no clustering keys because no ordering is required.\n",
+    "- So, the PRIMARY KEY will be: `PRIMARY KEY (session_id, item_in_session)`"
    ]
   },
   {
@@ -435,7 +454,12 @@
     "\n",
     "\n",
     "*Give me only the following: name of artist, song (sorted by itemInSession), \n",
-    "user (first and last name) for userid = 10, sessionid = 182*"
+    "user (first and last name) for userid = 10, sessionid = 182*\n",
+    "\n",
+    "Primary key rationale:\n",
+    "- The filtering columns (primary keys) will be: `user_id` and `session_id`. \n",
+    "- The ordering column (clustering key) will be: `item_in_session`. \n",
+    "- So, the PRIMARY KEY will be: `PRIMARY KEY ((user_id, session_id), item_in_session)`"
    ]
   },
   {
@@ -534,10 +558,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Query 3** - Create table, insert into it, and check query\n",
+    "**Query 3**\n",
     "\n",
     "*Give me every user name (first and last) in my music app history who listened\n",
-    "to the song 'All Hands Against His Own'*"
+    "to the song 'All Hands Against His Own'*\n",
+    "\n",
+    "Primary key rationale:\n",
+    "- The filtering columns (primary key) will be: `song_title`. \n",
+    "- The ordering column (clustering key) will be: `user_id`. \n",
+    "- So, the PRIMARY KEY will be: `PRIMARY KEY ((song_title), user_id)`"
    ]
   },
   {
@@ -615,9 +644,9 @@
    },
    "outputs": [],
    "source": [
-    "CassandraHandler.drop_table(session, \"event_1\")\n",
-    "CassandraHandler.drop_table(session, \"event_2\")\n",
-    "CassandraHandler.drop_table(session, \"event_3\")\n"
+    "CassandraHandler.drop_table(session, 'songs_by_user_session_item')\n",
+    "CassandraHandler.drop_table(session, 'songs_by_user_in_session')\n",
+    "CassandraHandler.drop_table(session, 'user_by_song')\n"
    ]
   },
   {
@@ -639,6 +668,13 @@
    "source": [
     "CassandraHandler.close_cluster_and_session(cluster, session)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
